Prevent overlap of image within container

--- a/src/assets/custom/css/_sass/_service-line-hero.scss
+++ b/src/assets/custom/css/_sass/_service-line-hero.scss
@@ -50,6 +50,8 @@
 }
 
 .service-line-hero__image-container {
+  overflow: hidden;
+
   @include small-and-medium {
     display: none;
     overflow: hidden;
